# salience-network-multiscale-switch

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml  requirements.txt
data/: README.md
data/dataframes/: MICA_PNI.csv  df_1a.tsv  df_1a_LH.tsv  df_2b_label.csv  df_2b_label_LH.csv  figure1_part1_df.tsv  figure_1a_pni_to_mics.csv
data/surfaces/ieeg_surfaces/: L.anat.reg.surf.gii  R.anat.reg.surf.gii  surf_lh_ieeg_atlas.surf.gii
docs/: methods.md
scripts/: figure_1a_t1map.py  figure_1b_contextualisation.py  figure_1c_cortical_types.py  figure_2_distance.py  figure_3_ieeg_mica.py  figure_3_ieeg_mni.py
src/: atlas_load.py  gradient_computation.py  ieeg_processing.py  logging_utils.py  plot_colors.py
