[project]
name = "salience-network-multiscale-switch"
version = "0.1.0"
description = "Code to reproduce analyses for 'The multiscale architecture of the salience network supports a brain-wide switch function'"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "nibabel",
    "matplotlib",
    "scipy",
    "brainspace",
    "bctpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
